manifests/integrated-tools/tactical-rmm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tactical-rmm
  namespace: integrated-tools
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rmm.maximumit.solutions
      secretName: wildcard-maximumit-tls
  rules:
    - host: rmm.maximumit.solutions
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tactical-nginx
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: tactical-nginx
                port:
                  number: 8000
          - path: /natsws
            pathType: Prefix
            backend:
              service:
                name: tactical-nginx
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: tactical-nginx
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tactical-nginx
                port:
                  number: 8080
